# AgentGenesis

./: .gitignore  Dockerfile.sandbox-base  LICENSE  README.md  __init__.py  api.py  base.py  client.py  config.py  dual_sandbox_evaluator.py  health.py  isolated_evaluator.py  models.py  pyproject.toml  registry.py  requirements.txt  sandbox_backend.py  sandbox_pool.py  service.py  transport.py
docs/: 出题指南.md  快速熟悉项目.md
local/: .env  __init__.py  artifact_builder.py  build_solver_package.py  eval_types.py  evaluator.py  problem_loader.py  solver_package_export.py  visualization.py
problems/: __init__.py
proto/: __init__.py  eval_bridge.proto  eval_bridge_pb2.py  eval_bridge_pb2_grpc.py
runtime/: __init__.py  artifact.py  gateway.py  history.py  isolated_adapter.py  isolated_session.py  judge_runtime.py  judge_scaffold.py  multi_agent_scaffold.py  pair_session.py  process.py  protocol.py  results.py  router.py  sandbox.py  user_adapter.py  user_runtime.py
tests/: __init__.py  conftest.py  test_api.py  test_base.py  test_client.py  test_client_additional.py  test_config.py  test_dual_sandbox_evaluator.py  test_dual_sandbox_evaluator_additional.py  test_health.py  test_health_additional.py  test_isolated_protocol_additional.py  test_local_artifact_builder.py  test_local_eval_types.py  test_local_evaluator_helpers.py  test_local_problem_loader.py  test_local_visualization.py  test_models.py  test_registry.py  test_registry_additional.py  test_runtime_bridges.py  test_runtime_core_modules.py  test_runtime_router_pair_session.py  test_sandbox_backend_additional.py  test_sandbox_pool.py  (+5 more)
(+2137 files in other folders)
